new/PSOC6/TIMER/timer_compare_capture.cydsn/BUILD.log
--------------- Build Started: 09/28/2021 19:21:08 Project: timer_compare_capture, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
The code generation step is up to date.
The compile step is up to date, no work needs to be done.
The link step is up to date, no work needs to be done.
arm-none-eabi-gcc.exe -mcpu=cortex-m4 -mfloat-abi=softfp -mfpu=fpv4-sp-d16 -mthumb -I. -IGenerated_Source\PSoC6 -IGenerated_Source\PSoC6\pdl\cmsis/include/ -IGenerated_Source\PSoC6\pdl\devices/psoc6/include/ -IGenerated_Source\PSoC6\pdl\devices/psoc6/include/ip/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/ctb/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/ctdac/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/device/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/efuse/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/flash/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/gpio/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/ipc/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/lvd/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/profile/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/prot/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/scb/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/sysanalog/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/sysclk/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/sysint/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/syslib/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/syspm/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/systick/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/tcpwm/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/trigmux/ -IGenerated_Source\PSoC6\pdl\drivers/peripheral/wdt/ -IGenerated_Source\PSoC6\pdl\middleware/ -IGenerated_Source\PSoC6\pdl\utilities/ -Wa,-alh=.\CortexM4\ARM_GCC_541\Debug/main_cm4.lst -g -D DEBUG -D CY_CORE_ID=0 -D CY_PSOC_CREATOR_USED=1 -D CYBLE_416045_02 -Wall -ffunction-sections -ffat-lto-objects -Og -c main_cm4.c -o .\CortexM4\ARM_GCC_541\Debug\main_cm4.o
In file included from Generated_Source\PSoC6/project.h:17:0,
                 from main_cm4.c:12:
Generated_Source\PSoC6\pdl\devices/psoc6/include/cyble_416045_02.h:36:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'typedef'
 typedef enum {
 ^
In file included from Generated_Source\PSoC6\pdl\devices/psoc6/include/cyble_416045_02.h:439:0,
                 from Generated_Source\PSoC6/project.h:17,
                 from main_cm4.c:12:
Generated_Source\PSoC6\pdl\cmsis/include/core_cm4.h:1677:39: error: unknown type name 'IRQn_Type'
 __STATIC_INLINE void __NVIC_EnableIRQ(IRQn_Type IRQn)
                                       ^
Generated_Source\PSoC6\pdl\cmsis/include/core_cm4.h:1694:46: error: unknown type name 'IRQn_Type'
 __STATIC_INLINE uint32_t __NVIC_GetEnableIRQ(IRQn_Type IRQn)
                                              ^
Generated_Source\PSoC6\pdl\cmsis/include/core_cm4.h:1713:40: error: unknown type name 'IRQn_Type'
 __STATIC_INLINE void __NVIC_DisableIRQ(IRQn_Type IRQn)
                                        ^
Generated_Source\PSoC6\pdl\cmsis/include/core_cm4.h:1732:47: error: unknown type name 'IRQn_Type'
 __STATIC_INLINE uint32_t __NVIC_GetPendingIRQ(IRQn_Type IRQn)
                                               ^
Generated_Source\PSoC6\pdl\cmsis/include/core_cm4.h:1751:43: error: unknown type name 'IRQn_Type'
 __STATIC_INLINE void __NVIC_SetPendingIRQ(IRQn_Type IRQn)
                                           ^
Generated_Source\PSoC6\pdl\cmsis/include/core_cm4.h:1766:45: error: unknown type name 'IRQn_Type'
 __STATIC_INLINE void __NVIC_ClearPendingIRQ(IRQn_Type IRQn)
                                             ^
Generated_Source\PSoC6\pdl\cmsis/include/core_cm4.h:1783:43: error: unknown type name 'IRQn_Type'
 __STATIC_INLINE uint32_t __NVIC_GetActive(IRQn_Type IRQn)
                                           ^
Generated_Source\PSoC6\pdl\cmsis/include/core_cm4.h:1805:41: error: unknown type name 'IRQn_Type'
 __STATIC_INLINE void __NVIC_SetPriority(IRQn_Type IRQn, uint32_t priority)
                                         ^
Generated_Source\PSoC6\pdl\cmsis/include/core_cm4.h:1827:45: error: unknown type name 'IRQn_Type'
 __STATIC_INLINE uint32_t __NVIC_GetPriority(IRQn_Type IRQn)
                                             ^
Generated_Source\PSoC6\pdl\cmsis/include/core_cm4.h:1902:39: error: unknown type name 'IRQn_Type'
 __STATIC_INLINE void __NVIC_SetVector(IRQn_Type IRQn, uint32_t vector)
                                       ^
Generated_Source\PSoC6\pdl\cmsis/include/core_cm4.h:1917:43: error: unknown type name 'IRQn_Type'
 __STATIC_INLINE uint32_t __NVIC_GetVector(IRQn_Type IRQn)
                                           ^
Generated_Source\PSoC6\pdl\cmsis/include/core_cm4.h: In function 'SysTick_Config':
Generated_Source\PSoC6\pdl\cmsis/include/core_cm4.h:1618:39: warning: implicit declaration of function '__NVIC_SetPriority' [-Wimplicit-function-declaration]
   #define NVIC_SetPriority            __NVIC_SetPriority
                                       ^
Generated_Source\PSoC6\pdl\cmsis/include/core_cm4.h:2019:3: note: in expansion of macro 'NVIC_SetPriority'
   NVIC_SetPriority (SysTick_IRQn, (1UL << __NVIC_PRIO_BITS) - 1UL); /* set Priority for Systick Interrupt */
   ^
In file included from Generated_Source\PSoC6\pdl\drivers/peripheral/ipc/cy_ipc_pipe.h:23:0,
                 from Generated_Source\PSoC6/project.h:25,
                 from main_cm4.c:12:
Generated_Source\PSoC6\pdl\drivers/peripheral/sysint/cy_sysint.h: At top level:
Generated_Source\PSoC6\pdl\drivers/peripheral/sysint/cy_sysint.h:302:5: error: unknown type name 'IRQn_Type'
     IRQn_Type       intrSrc;        /**< Interrupt source */
     ^
Generated_Source\PSoC6\pdl\drivers/peripheral/sysint/cy_sysint.h:359:35: error: unknown type name 'IRQn_Type'
 cy_israddress Cy_SysInt_SetVector(IRQn_Type IRQn, cy_israddress userIsr);
                                   ^
Generated_Source\PSoC6\pdl\drivers/peripheral/sysint/cy_sysint.h:360:35: error: unknown type name 'IRQn_Type'
 cy_israddress Cy_SysInt_GetVector(IRQn_Type IRQn);
                                   ^
Generated_Source\PSoC6\pdl\drivers/peripheral/sysint/cy_sysint.h:370:76: error: unknown type name 'IRQn_Type'
     __STATIC_INLINE void Cy_SysInt_SetNmiSource(cy_en_sysint_nmi_t nmiNum, IRQn_Type intrSrc);
                                                                            ^
Generated_Source\PSoC6\pdl\drivers/peripheral/sysint/cy_sysint.h:371:21: error: unknown type name 'IRQn_Type'
     __STATIC_INLINE IRQn_Type Cy_SysInt_GetNmiSource(cy_en_sysint_nmi_t nmiNum);
                     ^
Generated_Source\PSoC6\pdl\drivers/peripheral/sysint/cy_sysint.h:377:49: error: unknown type name 'IRQn_Type'
     __STATIC_INLINE void Cy_SysInt_SoftwareTrig(IRQn_Type IRQn);
                                                 ^
Generated_Source\PSoC6\pdl\drivers/peripheral/sysint/cy_sysint.h:414:72: error: unknown type name 'IRQn_Type'
 __STATIC_INLINE void Cy_SysInt_SetNmiSource(cy_en_sysint_nmi_t nmiNum, IRQn_Type intrSrc)
                                                                        ^
Generated_Source\PSoC6\pdl\drivers/peripheral/sysint/cy_sysint.h:455:17: error: unknown type name 'IRQn_Type'
 __STATIC_INLINE IRQn_Type Cy_SysInt_GetNmiSource(cy_en_sysint_nmi_t nmiNum)
                 ^
Generated_Source\PSoC6\pdl\drivers/peripheral/sysint/cy_sysint.h: In function 'Cy_SysInt_GetNmiSource':
Generated_Source\PSoC6\pdl\drivers/peripheral/sysint/cy_sysint.h:470:18: error: 'IRQn_Type' undeclared (first use in this function)
         return ((IRQn_Type)(CPUSS_CM4_NMI_CTL((uint32_t)nmiNum - 1UL)));
                  ^
Generated_Source\PSoC6\pdl\drivers/peripheral/sysint/cy_sysint.h:470:18: note: each undeclared identifier is reported only once for each function it appears in
Generated_Source\PSoC6\pdl\drivers/peripheral/sysint/cy_sysint.h: At top level:
Generated_Source\PSoC6\pdl\drivers/peripheral/sysint/cy_sysint.h:493:45: error: unknown type name 'IRQn_Type'
 __STATIC_INLINE void Cy_SysInt_SoftwareTrig(IRQn_Type IRQn)
                                             ^
In file included from Generated_Source\PSoC6/project.h:25:0,
                 from main_cm4.c:12:
Generated_Source\PSoC6\pdl\drivers/peripheral/ipc/cy_ipc_pipe.h:130:5: error: unknown type name 'IRQn_Type'
     IRQn_Type       pipeIntrSrc;       /**< Interrupt vector number that includes all endpoints on pipe               */
     ^
In file included from Generated_Source\PSoC6\pdl\devices/psoc6/include/cyble_416045_02.h:439:0,
                 from Generated_Source\PSoC6/project.h:17,
                 from main_cm4.c:12:
main_cm4.c: In function 'main':
Generated_Source\PSoC6\pdl\cmsis/include/core_cm4.h:1616:39: warning: implicit declaration of function '__NVIC_ClearPendingIRQ' [-Wimplicit-function-declaration]
   #define NVIC_ClearPendingIRQ        __NVIC_ClearPendingIRQ
                                       ^
main_cm4.c:59:5: note: in expansion of macro 'NVIC_ClearPendingIRQ'
     NVIC_ClearPendingIRQ(isrTimer_cfg.intrSrc);/* Clears the interrupt */
     ^
Generated_Source\PSoC6\pdl\cmsis/include/core_cm4.h:1611:39: warning: implicit declaration of function '__NVIC_EnableIRQ' [-Wimplicit-function-declaration]
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
   #define NVIC_EnableIRQ              __NVIC_EnableIRQ
                                       ^
main_cm4.c:60:5: note: in expansion of macro 'NVIC_EnableIRQ'
     NVIC_EnableIRQ(isrTimer_cfg.intrSrc); /* Enable the core interrupt */
     ^
main_cm4.c:76:9: warning: unused variable 'curr_num_pulses' [-Wunused-variable]
     int curr_num_pulses = 0;
         ^
--------------- Build Failed: 09/28/2021 19:21:09 ---------------
